--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+cycler==0.10.0
 igrf==13.0.0
+kiwisolver==1.3.1
+matplotlib==3.4.2
 numpy==1.21.0
 pandas==1.3.0
+Pillow==8.3.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
